# erratic-drummer

./: .classpath  .project  AndroidManifest.xml  CLAUDE.md  privacy_policy.md  project.properties  readme.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/er2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/android/widget/: VerticalSeekBar.java
app/src/main/java/my/proj/: DatabaseManager.java  DrumPatternCore.java  LoadPopups.java  Main.java  MidiExporter.java  Preferences.java  SoundMaker.java
app/src/main/res/anim/: fadein.xml  fadeinout.xml  fadeout.xml  repeat_counter_fadein.xml
app/src/main/res/drawable/unused/: backrepeat.xml
app/src/main/res/layout/: aboutme.xml  customized_spinner.xml  load_screen_layout.xml  main.xml  twopanes.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: density_array.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-xlarge/: layout.xml
app/src/main/res/xml/: preferences.xml  seekbar_progress_inst.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
res/anim/: fadein.xml  fadeinout.xml  fadeout.xml  repeat_counter_fadein.xml
res/layout/: main.xml  twopanes.xml
res/values/: color.xml  density_array.xml  layouts.xml  strings.xml
res/xml/: preferences.xml  seekbar_progress.xml  seekbar_progress_density.xml
src/my/proj/: Main.java  SoundMaker.java
(+1 files in other folders)
